--- a/src/fonts/inter.css
+++ b/src/fonts/inter.css
@@ -3,6 +3,15 @@
 @supports (font-variation-settings: normal) {
   :root { font-family: "InterVariable", sans-serif; font-optical-sizing: auto; }
 } */
+
+@font-face{
+	font-family: Redaction;
+	font-style: normal;
+	font-weight: 500;
+	font-display: swap;
+	src: url("Redaction.woff2") format("woff2");
+}
+
 @font-face {
     font-family: InterVariable;
     font-style: normal;
